name:                myth-reborns
version:             0.1.0.0
synopsis:            Haskell game showing The (Jere)Myth.
description:         This a sample game in Haskell.        
license:             MIT
license-file:        LICENSE
author:              Alexandre Lucchesi
maintainer:          alexandrelucchesi@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable myth-reborns
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                     , GLFW-b
                     , gloss
                     , gloss-rendering
                     , GLUT
                     , OpenGL
  hs-source-dirs:      src
  default-language:    Haskell2010
